--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,6 +16,7 @@ collections:
       - { label: "Заголовок", name: "title", widget: "string" }
       - { label: "Дата", name: "date", widget: "datetime" }
       - { label: "Текст", name: "body", widget: "markdown" }
+      - { label: "Показывать на главной", name: "featured", widget: "boolean", default: false }
 
 
 
