--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,6 +2,8 @@ backend:
   name: github
   repo: kupri-val/test-child
   branch: main
+  base_url: https://auth.decapcms.org
+  auth_endpoint: oauth
 
 media_folder: "assets/uploads"
 public_folder: "/assets/uploads"
